<resources>
    <string name="app_name">Exchange</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_view_person">Browse/Search People</string>
    <string name="title_activity_edit_item">Edit Book</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_item_details">ItemDetails</string>
    <string name="title_activity_profile_details">Profile Details</string>


    <string name = "globalENV"> globalenvfilename</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_edit_comment">EditCommentActivity</string>
    <string name="title_activity_trade_manager">Trade Manager</string>
    <string name="title_activity_trade_listing">TradeListingActivity</string>
    <string name="title_activity_trade__items_inventory">Trade_ItemsInventory</string>
    <string name="title_activity_trade">TradeActivity</string>
    <string name="title_activity_edit_password">EditPasswordActivity</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_photo">PhotoActivity</string>

    <!-- Login Strings-->
    <string name="login">Login</string>
    <string name="username">Username</string>

    <!-- Home Strings-->
    <string name="home_message">What do you feel like doing?</string>
    <string name="home_inventory">View My Inventory</string>
    <string name="home_trade">Trade manager</string>
    <string name="home_people">Browse/Search People</string>

    <!-- Home Menu Strings-->
    <string name="home_view_profile">View Profile</string>
    <string name="home_edit_profile">Edit Profile</string>

    <!-- Inventory Strings-->
    <string name="add_item">Add Book</string>

    <!-- Add Item Activity-->
    <string name="title_activity_add_item">Add Item</string>
    <string name="item_image">Item Image</string>
    <string name="category_label">Category:</string>
    <string name="quantity_hint">Quantity</string>
    <string name="quality_hint">Quality</string>
    <string name="type_hint">Type</string>
    <string name="name_hint">Name</string>
    <string name="add">Add</string>
    <string name="comment">Comment</string>
    <string name="sort_by">Sort By:</string>
    <string name="author">Author</string>
    <string name="is_shareable">Is Shareable</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="profile_image">Profile Image</string>
    <string name="done">Done</string>
    <string name="title_activity_book_details">Book Details</string>
    <string name="title_activity_inventory_details">Inventory Details</string>
    <string name="name_label">Name:</string>
    <string name="not_available">Not Available</string>
    <string name="author_label">Author:</string>
    <string name="quality_label">Quality:</string>
    <string name="quantity_label">Quantity:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_new_book">Add new Book</string>
    <string name="view_inventory_details">View Inventory Details</string>
    <string name="view_selected_book_info">View selected Book Info</string>
    <string name="edit_selected_book_info">Edit selected Book Info</string>
    <string name="remove_selected_book">Remove selected Book</string>
    <string name="remove_selected_books">Remove selected Books</string>
    <string name="search">Search</string>
    <string name="clone_selected_book">Clone Selected Book</string>
    <string name="select_for_trading">Select for trading</string>

    <string-array name="NavigationArray">
        <item>Inventory</item>
        <item>Trade Manager</item>
        <item>Browse Friends</item>
    </string-array>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_detailed_photo">Detailed Photo</string>
    <string name="download_photos">Download Photos</string>
</resources>
