<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cmput301exchange.exchange.InventoryActivity">

    <item android:id="@+id/item_search"
        android:title="@string/search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="200"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_remove_multi" android:title="@string/remove_selected_books"
        android:orderInCategory="900" app:showAsAction="never" />

    <item android:id="@+id/action_remove_single" android:title="@string/remove_selected_book"
        android:orderInCategory="800" app:showAsAction="never" />

    <item android:id="@+id/action_clone" android:title="@string/clone_selected_book"
        android:orderInCategory="700" app:showAsAction="never" />

    <item android:id="@+id/action_trade_Item" android:title="@string/select_for_trading"
        android:orderInCategory="600" app:showAsAction="never" />

    <item android:id="@+id/action_edit" android:title="@string/edit_selected_book_info"
        android:orderInCategory="500" app:showAsAction="never" />

    <item android:id="@+id/action_view" android:title="@string/view_selected_book_info"
        android:orderInCategory="400" app:showAsAction="never" />

    <item android:id="@+id/action_details" android:title="@string/view_inventory_details"
        android:orderInCategory="300" app:showAsAction="never" />

    <item android:id="@+id/action_add" android:title="@string/add_new_book"
        android:orderInCategory="100" app:showAsAction="ifRoom" />

</menu>
