<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cmput301exchange.exchange.Activities.AddItemActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageButton"
                android:contentDescription="@string/item_image"
                android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editName"
                android:hint="@string/name_hint"
                android:layout_gravity="center_horizontal"
                android:maxLength="20"
                android:singleLine="true"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editAuthor"
                android:hint="@string/author"
                android:layout_gravity="center_horizontal"
                android:maxLength="30"
                android:singleLine="true"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editQuality"
                android:hint="@string/quality_hint"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editQuantity"
                android:hint="@string/quantity_hint"
                android:layout_gravity="center_horizontal"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number"/>



        </LinearLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_label"
                android:textSize="18sp"
                android:id="@+id/textView17"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories_spinner"
                android:layout_toEndOf="@+id/textView17" />

        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/editComment"
                android:gravity="top"
                android:hint="@string/comment"
                android:layout_weight="0.64"
                android:maxLength="300"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/is_shareable"
                android:textSize="18sp"
                android:id="@+id/shareable_checkBox"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>


        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/add_button"
                android:layout_gravity="center_horizontal"
                android:onClick="add"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
